variants/v10/TASK.md
# Вариант 10. «Сервис аутентификации»

Сервис выдаёт и подписывает токены. Рядом лежит Java-модуль аудита. Go-часть хэширует пароли, защищает формы от CSRF и собрана в образ без ОС.

Вы — инженер по безопасности. Перед выводом сервиса в продуктивную среду нужно провести анализ
состава ПО, оценить найденные уязвимости и довести образы до прохождения security gate.
Общий порядок работы описан в [README.md](../../README.md), здесь — только особенности варианта.

## Состав

| Компонент | Каталог | Образ |
|---|---|---|
| Python-сервис | `python-app/` | `lab4/v10-py:before` |
| Go-сервис | `go-app/` | `lab4/v10-go:before` |

## Сборка исходных образов

```bash
cp -r variants/v10 ~/lab4-<фамилия>-v10 && cd ~/lab4-<фамилия>-v10
mkdir -p sbom scans
docker build -t lab4/v10-py:before python-app
docker build -t lab4/v10-go:before go-app
```

## Что нужно сделать

Подробные инструкции и примеры команд — в разделе 2 [методички](../../README.md#2-порядок-выполнения).

- [ ] Скопировать каталог варианта и собрать исходные образы (команды выше).
- [ ] **Часть 1.** Построить SBOM обоих образов в форматах syft-json, CycloneDX и SPDX; посчитать компоненты
      по типам; сравнить SBOM исходников и образа; извлечь Go-бинарь и построить SBOM по нему; сравнить слои.
- [ ] **Часть 2.** Просканировать оба SBOM grype, сохранить JSON-отчёты, составить сводку находок.
- [ ] **Часть 3.** Составить топ-10 уязвимостей по RISK для каждого образа, разобрать три уязвимости.
- [ ] **Часть 4.** Исправить `python-app/` и `go-app/`; собрать `lab4/v10-py:after` и `lab4/v10-go:after`
      без исправимых High/Critical; убедиться, что оба сервиса отвечают на `GET /health`; описать остаточный
      риск и заполнить `.grype.yaml`.
- [ ] **Часть 5.** Написать `scan.sh` и показать, что он не пропускает `:before` и пропускает `:after`.
- [ ] **Часть 6.** Ответить на индивидуальные вопросы (ниже).
- [ ] Оформить `REPORT.md` по шаблону и сдать каталог (структура — в разделе 3 методички).

## Индивидуальные вопросы

Ответы оформите в разделе 6 отчёта. Каждое утверждение подтверждайте командой и её выводом (фрагментом).

1. Для пакета `ecdsa` grype сообщает об уязвимости без исправленной версии. Прочитайте advisory: почему авторы не собираются её исправлять? Какие варианты действий у вас есть (замена библиотеки, принятие риска с обоснованием в `.grype.yaml`/VEX)?
2. Go-образ собран на `scratch`. Сколько пакетов ОС нашёл в нём syft? Какие уязвимости остались и почему смена базового образа их не устранит?
3. Какой Python-пакет присутствует в образе, но отсутствует в `requirements.txt`? Как он туда попал?
