variants/v11/TASK.md
# Вариант 11. «Агрегатор RSS»

Агрегатор RSS-лент: загружает ленты, очищает HTML, рендерит описания из Markdown. Go-часть на очень старом базовом образе извлекает заголовки страниц.

Вы — инженер по безопасности. Перед выводом сервиса в продуктивную среду нужно провести анализ
состава ПО, оценить найденные уязвимости и довести образы до прохождения security gate.
Общий порядок работы описан в [README.md](../../README.md), здесь — только особенности варианта.

## Состав

| Компонент | Каталог | Образ |
|---|---|---|
| Python-сервис | `python-app/` | `lab4/v11-py:before` |
| Go-сервис | `go-app/` | `lab4/v11-go:before` |

## Сборка исходных образов

```bash
cp -r variants/v11 ~/lab4-<фамилия>-v11 && cd ~/lab4-<фамилия>-v11
mkdir -p sbom scans
docker build -t lab4/v11-py:before python-app
docker build -t lab4/v11-go:before go-app
```

## Что нужно сделать

Подробные инструкции и примеры команд — в разделе 2 [методички](../../README.md#2-порядок-выполнения).

- [ ] Скопировать каталог варианта и собрать исходные образы (команды выше).
- [ ] **Часть 1.** Построить SBOM обоих образов в форматах syft-json, CycloneDX и SPDX; посчитать компоненты
      по типам; сравнить SBOM исходников и образа; извлечь Go-бинарь и построить SBOM по нему; сравнить слои.
- [ ] **Часть 2.** Просканировать оба SBOM grype, сохранить JSON-отчёты, составить сводку находок.
- [ ] **Часть 3.** Составить топ-10 уязвимостей по RISK для каждого образа, разобрать три уязвимости.
- [ ] **Часть 4.** Исправить `python-app/` и `go-app/`; собрать `lab4/v11-py:after` и `lab4/v11-go:after`
      без исправимых High/Critical; убедиться, что оба сервиса отвечают на `GET /health`; описать остаточный
      риск и заполнить `.grype.yaml`.
- [ ] **Часть 5.** Написать `scan.sh` и показать, что он не пропускает `:before` и пропускает `:after`.
- [ ] **Часть 6.** Ответить на индивидуальные вопросы (ниже).
- [ ] Оформить `REPORT.md` по шаблону и сдать каталог (структура — в разделе 3 методички).

## Индивидуальные вопросы

Ответы оформите в разделе 6 отчёта. Каждое утверждение подтверждайте командой и её выводом (фрагментом).

1. В каталоге `python-app/vendor/` лежит сторонний модуль, скопированный в проект. Нашёл ли его syft? Определите версию модуля по его исходному коду и проверьте её уязвимости (`grype purl`). Как бы вы организовали учёт таких «вендоренных» компонентов?
2. Go-сервис работает на `debian:stretch-slim`. Сколько лет этому дистрибутиву без поддержки? Сравните количество уязвимостей ОС и количество уязвимостей самого приложения.
3. Найдите в отчёте пакет, у которого одна и та же CVE встречается под разными идентификаторами (GHSA, CVE, GO-…). Как работает флаг `--by-cve` и зачем он нужен при подсчёте?
